ags (0.4.2-74-1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsPatternEdit focus, selection, coloring of selected notes and a crash related to wrong function call
	* added exclusion for sequencers by using "exclude sequencers" checkbutton in navigation
	* added copy & paste pattern context menu items to drum and matrix
	* fixed AgsMatrix input
	* fixed NULL pointer error in ags_count_beats_audio_run.c

ags (0.4.2-73-1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* back-ported AgsPatternEdit
	* implemented basic editing key strokes like Ctrl-c, Ctrl-v and Ctrl-x for AgsPatternEdit

ags (0.4.2-72-1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented basic editing key strokes like Ctrl-c, Ctrl-v and Ctrl-x
	* implemented seeking for paste if position tool is selected
	* updated clipboard version to 0.4.2

ags (0.4.2-71-1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* commented-out two unimplemented menu entries in editor's machine selector. Add and remove tab you may do so by using resize tab of machine properties dialog.
	* implemented select-all in editor
	* fixed multi-channel editing mode
	* fixed refresh of GUI after cut or paste
	* fixed crash related to XML IO

ags (0.4.2-70-1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor bug-fixes

ags (0.4.2-69-1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added XSL file to transform output of `midi2xml` using `xsltproc`

ags (0.4.2-68-1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added `midi2xml` the MIDI file to XML parser