@@ -558,10 +558,8 @@ ags_matrix_set_pads(AgsAudio *audio, GType type,
 	ags_recycling_add_audio_signal(source->first_recycling,
 				       audio_signal);
 
-	if((AGS_MACHINE_MAPPED_RECALL & (machine->flags)) != 0){
-	  ags_matrix_output_map_recall(matrix,
-				       pads_old);
-	}
+	ags_matrix_output_map_recall(matrix,
+				     pads_old);
       }
     }else{
     }
@@ -758,7 +756,7 @@ void
 ags_matrix_input_map_recall(AgsMatrix *matrix, guint input_pad_start)
 {
   AgsAudio *audio;
-  AgsChannel *source, *current, *destination;
+  AgsChannel *source, *current;
 
   AgsBufferChannel *buffer_channel;
   AgsBufferChannelRun *buffer_channel_run;
@@ -787,38 +785,6 @@ ags_matrix_input_map_recall(AgsMatrix *matrix, guint input_pad_start)
 			       AGS_RECALL_FACTORY_RECALL |
 			       AGS_RECALL_FACTORY_ADD),
 			      0);
-
-    destination = ags_channel_nth(audio->output,
-				  current->audio_channel);
-
-    while(destination != NULL){
-      /* recall */
-      list = current->recall;
-
-      while((list = ags_recall_find_type(list, AGS_TYPE_BUFFER_CHANNEL)) != NULL){
-	buffer_channel = AGS_BUFFER_CHANNEL(list->data);
-
-	g_object_set(G_OBJECT(buffer_channel),
-		     "destination\0", destination,
-		     NULL);
-
-	list = list->next;
-      }
-
-      list = current->recall;
-    
-      while((list = ags_recall_find_type(list, AGS_TYPE_BUFFER_CHANNEL_RUN)) != NULL){
-	buffer_channel_run = AGS_BUFFER_CHANNEL_RUN(list->data);
-
-	g_object_set(G_OBJECT(buffer_channel_run),
-		     "destination\0", destination,
-		     NULL);
-
-	list = list->next;
-      }
-
-      destination = destination->next_pad;
-    }
 
     /* ags-stream */
     ags_recall_factory_create(audio,
